3: JSON & JS for last row
Updates:
Row 3 (bottom) left and right cards - JSON & JS Fetch

--- a/public/index.html
+++ b/public/index.html
@@ -171,7 +171,7 @@
                             <div class="col-xs-12">
                                 <div class="card-group d-flex flex-wrap">
                                     <div class="col-md-8">
-                                        <div class="card h-100 leftbar">
+                                        <div id="leftgroup" class="card h-100 leftbar">
                                             <div class="card-body">
                                                 <h2 class="card-title heading2">Today's trends</h2>
                                                 <div class="subheading">
@@ -233,7 +233,7 @@
                                         </div>
                                     </div>
                                     <ul class="list-group list-group-flush listblock">
-                                        <li class="list-group-item">
+                                        <!-- <li class="list-group-item">
                                             Waiting on Feature Request
                                             <span class="text-nowrap text-xs text-muted">4238</span>
                                         </li>
@@ -248,7 +248,7 @@
                                         <li class="list-group-item">
                                             Pending
                                             <span class="text-nowrap text-xs text-muted">281</span>
-                                        </li>
+                                        </li> -->
                                     </ul>
                                 </div>
                             </div>
@@ -263,29 +263,29 @@
                                         <p class="card-text subheading"> Today </p>
                                     </div>
                                     <ul class="list-group list-group-flush listblock">
-                                        <li class="list-group-item disabledtext" aria-disabled="true">
+                                        <!-- <li class="list-group-item disabledtext" aria-disabled="true">
                                             Create new task
                                             <button><i class="bi bi-plus-square-fill"></i></button>
-                                        </li>
-                                        <li class="list-group-item">
+                                        </li> -->
+                                        <!-- <li class="list-group-item">
                                             <input class="form-check-input me-1" type="radio" name="listGroupRadio" value=""
                                                 id="firstRadio" checked>
                                             <label class="form-check-label" for="firstRadio">Finish ticket update</label>
-                                            <span class="badge text-bg-warning utext">URGENT</span>
-                                        </li>
-                                        <li class="list-group-item">
+                                            <span id="text-bg-yellow" class="badge text-bg-warning utext">URGENT</span>
+                                        </li> -->
+                                        <!-- <li class="list-group-item">
                                             <input class="form-check-input me-1" type="radio" name="listGroupRadio" value=""
                                                 id="secondRadio">
                                             <label class="form-check-label" for="secondRadio">Create new ticket
                                                 example</label>
-                                            <span class="badge text-bg-success ntext">NEW</span>
-                                        </li>
-                                        <li class="list-group-item">
+                                            <span id="text-bg-green" class="badge text-bg-success ntext">NEW</span>
+                                        </li> -->
+                                        <!-- <li class="list-group-item">
                                             <input class="form-check-input me-1" type="radio" name="listGroupRadio" value=""
                                                 id="thirdRadio">
                                             <label class="form-check-label" for="thirdRadio">Update ticket report</label>
                                             <span class="badge text-bg-secondary deftext" id="deftext">DEFAULT</span>
-                                        </li>
+                                        </li> -->
                                     </ul>
                                 </div>
                             </div>
